--- a/.classpath
+++ b/.classpath
@@ -25,5 +25,6 @@
 	<classpathentry kind="lib" path="/Volumes/Data/Web/OctgnServer/jetty-distribution-8.0.4.v20111024/lib/jetty-websocket-8.0.4.v20111024.jar"/>
 	<classpathentry kind="lib" path="/Volumes/Data/Web/OctgnServer/jetty-distribution-8.0.4.v20111024/lib/jetty-xml-8.0.4.v20111024.jar"/>
 	<classpathentry kind="lib" path="/Volumes/Data/Web/OctgnServer/jetty-distribution-8.0.4.v20111024/lib/servlet-api-3.0.jar"/>
+	<classpathentry kind="lib" path="/Volumes/Data/Web/OctgnServer/gson-2.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
